--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,6 +4,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "axios": "^0.25.0",
     "d3-shape": "^3.1.0",
     "expo": "^44.0.0",
