--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,9 @@
     "d3-shape": "^3.1.0",
     "expo": "^44.0.0",
     "expo-app-loading": "~1.3.0",
+    "expo-camera": "~12.1.2",
+    "expo-image-picker": "~12.0.1",
+    "firebase": "^9.6.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -16,6 +19,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
