--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,17 +11,18 @@
     "expo-app-loading": "~1.3.0",
     "expo-camera": "~12.1.2",
     "expo-image-picker": "~12.0.1",
+    "expo-updates": "~0.11.6",
     "firebase": "^9.6.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "0.17.1",
-    "expo-updates": "~0.11.6"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
