--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,7 +22,8 @@
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
