Adding react-native-nfc-manager to the config file...

--- a/Frontend/app.json
+++ b/Frontend/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "shrizzle-frontend",
     "slug": "shrizzle-app",
-    "orientation": "portrait"
+    "orientation": "portrait",
+    "plugins": ["react-native-nfc-manager"]
   }
 }
