--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,9 +14,11 @@
     "expo-image-picker": "~12.0.1",
     "expo-updates": "~0.11.6",
     "firebase": "^9.6.6",
+    "jetifier": "^2.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-mifare-classic-wrapper": "github:featherbear/react-native-mifare-classic-wrapper",
     "react-native-nfc-manager": "^3.13.2",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.3.2",
