--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,15 +26,17 @@
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "expo-splash-screen": "~0.14.1",
+    "expo-status-bar": "~1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "version": "1.0.0",
